# civicpulse-ml-dev

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
models/: modeldata.json  models_metadata.json
notebooks/: 0.01-ika-roboflow-yolo.ipynb  0.01-ika-trying-roboflow-yolo-ocr.ipynb  0.02-ika-roboflow-easyocr.ipynb
src/: main.py
src/civicpulseML/: config.py  dataset.py  model.py
tests/: test_config.py  test_model.py
